test/integration/bad/lang/bad_bar.stan
generated quantities {
   vector[3] foo;
   foo = rep_vector(1.2 | 3);
}
